	* Gonryunn Quests - 0% - Botting on official Servers
	* Artifacts of God (MRO GOD ITEM QUESTS) - 1% - resources only from MRO Official
	  guide book so, probably unofficial
MasterOfMuppets
	* Working on The Sign Quest atm.
	* Updating Items / Scripts
Nexon
	* Adding in the new Abyss/Thanatos/Lighthalzen NPC's and optimizing them.

== Changelog ==

Date		Added
======

02/09
	* Fixed another issue of Cube Room Quest [Lupus]
	- Fixed event_6_new_hats.txt wrong ID, thanks to phabyo
02/07
	* Added missing semicolons in the valentine's day event and disabled the Dog's year event. [Zephiris]
	* Added a custom quest for Jewel Case for 99 Base Level Players of 2nd Class [Lupus]
	* Fixed the spawns that where using the no exp/drop version of Male Thief Bug (Thanks to irmin) [Poki#3]

02/05
	* Lighthalzen cube quest: Fixed password bug, fixed endless item exploit, some typos [Lupus]
	* Added yuno_in02 into noteleport/nomemo, etc map flags. It spoils the quest [Lupus]
		There's 1 missing mapflag: 'noreturn' (you may use butterfly wings to escape)
02/03
	* Implemented the cube room quest [MasterOfMuppets]
	* Temp measure to stop exploit in novice ground. [Vicious]
01/31
	* Fixed another bug in the monk quest. [Zephiris]
01/29
	* Updated the Juperos dungeon spawns according to ROmap. [MasterOfMuppets]
01/28
	* Fixed Warp to Abbys Lake. [Poki#3]
	* Removed dup warps around Einbroch. [Poki#3]
	* Fixed ein_fild04 -> ein_fild05 warp. THanks to Playtester [Poki#3]
	* Re-wrote the Dye NCP (original, not the custom one) [Poki#3]
	- I hope there aren't any bugs in it. The Jobs are sorted based on the file names
	  that the client reads.
	* Fixed the Warper [Poki#3]
	* Fixed Hugel warps (htere weren't any TABs) [Lupus]
	* Added Event: Eastern New Year 2006 The Year Of The Fire Dog (28-29 January 2006) [Lupus]

01/27
	* Added birkiczd's Odin temple warps. Move the Saylor from hugel.txt there. [Poki#3]